# RamanKit

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analysis.md  api-overview.md  core.md  getting-started.md  io.md  metrics.md  peaks.md  plotting.md  preprocessing.md  synthetic.md
src/ramankit/: __init__.py
src/ramankit/analysis/: __init__.py  _common.py  _results.py  ica.py  nmf.py  pca.py
src/ramankit/core/: __init__.py  _nd.py  _validation.py  collection.py  image.py  metadata.py  operations.py  spectrum.py
src/ramankit/io/: __init__.py  _provenance.py  base.py  bwtek.py  csv.py  npz.py  registry.py
src/ramankit/metrics/: __init__.py  _shared.py  quality.py  similarity.py
src/ramankit/peaks/: __init__.py  detect.py  fit.py  metrics.py
src/ramankit/pipelines/: __init__.py  pipeline.py
tests/: _synthetic_helpers.py  _test_helpers.py  test_core.py  test_io.py  test_peak_plotting.py  test_peaks.py  test_plotting.py  test_preprocessing.py  test_synthetic.py
tests/analysis/: test_ica.py  test_nmf.py  test_pca.py
tests/core/: test_collection.py  test_image.py  test_nd.py  test_spectrum.py
tests/io/: test_base.py  test_bwtek.py  test_csv.py  test_npz.py  test_registry.py
tests/metrics/: test_quality.py  test_similarity.py
tests/peaks/: test_detect.py  test_fit.py  test_metrics.py
tests/plotting/: test_maps.py  test_peaks.py  test_spectra.py
tests/preprocessing/: test_baseline.py  test_despike.py  test_misc.py  test_normalization.py  test_pipeline.py  test_resample.py  test_smoothing.py
(+17 files in other folders)
